# SSYX02Group2

./: Kalman.py  MasterClientBuilder.py  README.md  intPointMovePath.py  movePath.py  movePathPres.py  newstart.bash  robot_run.bash  rosstart.bash  split_start.bash  startNoFilter.bash  startRobots.bash  start_presentation.bash  startupConfig.py
ArsamTest/controller/: package.xml  std_launch.launch
Nodes/: CMakeLists.txt  package.xml
Nodes/src/: Operator.py  UpdateTwistService.py  serviceMoveForward.py  serviceRotate.py
controller/: CMakeLists.txt  package.xml  std_launch.launch
controller/last_year_code/: LocateRobot.py  Measure.py  UWBHandler.py  get_coord_server.py
controller/msg/: Num.msg
controller/scripts/: DataPlotter.py  DataPlotter2.py  DataPlotter3.py  EKFFilter.py  EKFPoseHandler.py  EKFSensor.py  FirstProblem.py  Helper.py  Kalman123.py  KalmanFilter.py  KalmanFilter2.py  KalmanFilter2New.py  NonFilter.py  OptimizingProblem.py  PoseHandler.py  PresentationProblem.py  PriorityProblem.py  PriorityProblemOpt.py  PriorityProblemOptNew.py  PriorityProblemOptV2.py  Problem.py  ReservationProblem.py  RobotHandler.py  RobotHandlerNew.py  StandardProblem.py  UWBHandler.py  UWBPoseHandler.py  UWBPoseHandlerOLD.py  kalman.py  kalman2.py  kalman2New.py  kalman3.py  mainController.py  movePath.py  positionSampleNode.py  testKalman.py  testfilter.py
controller/srv/: FollowPath.srv  GetState.srv  SetAngVel.srv  (+3 more)
master_client/: Kalman.py  MasterClient.py  MasterClientBuilder.py  MasterClientsStartup.py  OptFunc.py  Path.py  ROScommunication.py  UWBHandler.py
(+16 files in other folders)
